--- a/client/src/styles/_nav.scss
+++ b/client/src/styles/_nav.scss
@@ -7,7 +7,7 @@ nav {
   position: sticky;
   top: 0px;
   z-index: 3;
-  box-shadow: 3px 1px 5px 4px #5e5e5e;
+  // box-shadow: 3px 1px 5px 4px #314247;
   img {
     width: 50px;
     height: 50px;
@@ -37,7 +37,7 @@ nav {
     border-radius: 30px;
     font-size: 1.25rem;
     width: 40vw;
-    height: 7vh;
+    height: 6vh;
     margin-right: 40rem;
     border: none;
   }
