--- a/client/src/styles/_picture.scss
+++ b/client/src/styles/_picture.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding-left: 3rem;
 
   .picture {
     padding: 1rem;
@@ -28,7 +29,8 @@
         width: 250px;
         height: 350px;
         z-index: 3;
-        background-color: rgba($color: #382928, $alpha: 0.5);
+        border-radius: 8%;
+        background-color: rgba($color: #000000, $alpha: 0.5);
         a {
           position: relative;
           width: 20px;
@@ -36,10 +38,11 @@
           left: 11vw;
           top: 20vw;
           margin-left: 0.5rem;
+          margin-right: 0.5rem;
           z-index: 5;
           img {
-            width: 20px;
-            height: 20px;
+            width: 30px;
+            height: 30px;
           }
         }
       }
